<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.mallonline.models.User" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="@dimen/left_right_margins"
            android:paddingStart="@dimen/left_right_margins">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_text_input"
                style="@style/TextInplutLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_text_input_bottom_margin"
                android:layout_marginTop="@dimen/login_top_margin"
                app:errorTextAppearance="@style/TextAppearence.App.ErrorTextInputLayout"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/email"
                    style="@style/AppTheme.EditText1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:text="@{user.email}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/TextInplutLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingEnd="@dimen/text_input_left_right_padding"
                android:paddingStart="@dimen/text_input_left_right_padding"
                app:errorTextAppearance="@style/TextAppearence.App.ErrorTextInputLayout"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/password"
                    style="@style/AppTheme.EditText1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:height="@dimen/button_height"
                android:background="@drawable/btn_bg_selector"
                android:gravity="center"
                android:onClick="onLoginClicked"
                android:text="@string/login"
                android:textAlignment="gravity"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="25.4dp"
                android:layout_marginRight="25.4dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:onClick="onRegisterButtonClicked"
                android:text="@string/donot_have_account"
                android:textColor="@color/primary_txt_color" />
        </LinearLayout>
    </ScrollView>

</layout>